<resources>
    <string name="app_name">Crime Watch</string>
    <string name="hello_there_welcome_back">Hello there, Welcome Back</string>
    <string name="sign_in_to_continue">Sign In to Continue</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="fogot_password">Fogot Password?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="new_user_sign_up">New User? SIGN UP</string>
    <string name="main_splash_screen">Main Splash Screen</string>
    <string name="crime_watch">Crime Watch</string>
    <string name="a_mobile_app_to_report_crime">A mobile app to report crime</string>
    <string name="login_logo">Login Logo</string>
    <string name="welcome">Welcome</string>
    <string name="sign_up_to_get_started">Sign up to get started</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="already_a_member_login">Already a member? LOGIN</string>
    <string name="title_activity_main_map">MainMapActivity</string>
    <string name="button_to_get_my_location">Button to get my location</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="sample_card_tite">Sample card tite</string>
    <string name="the_description_of_the_text_the_description_of_the_text_the_description_of_the_text_the_description_of_the_text">The description of the text The description of the text The description of the text The description of the text</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="ouda_wycliffe">Ouda Wycliffe</string>
    <string name="profile">Profile</string>
    <string name="update">Update</string>
    <string name="report">Report</string>
    <string name="report_crime">Report crime</string>
    <string name="sms">SMS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="duration">Duration</string>
    <string name="distance">Distance</string>
    <string name="thank_you_for_ensuring_safety">An Office is Responding...</string>
</resources>