<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".LoginActivity"
    android:padding="20dp">

  <ImageView
      android:id="@+id/logoImage"
      android:layout_width="150dp"
      android:layout_height="150dp"
      android:transitionName="logo_image"
      android:src="@drawable/logo_car"
      android:contentDescription="@string/login_logo" />

  <TextView
      android:id="@+id/logo_name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="@font/bungee"
      android:text="@string/hello_there_welcome_back"
      android:transitionName="logo_text"
      android:textSize="40sp"
      android:textColor="@color/black"/>

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="@font/antic"
      android:text="@string/sign_in_to_continue"
      android:textSize="18sp" />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:layout_marginBottom="20dp"
      android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:hint="@string/username"
        android:transitionName="username_tran"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

      <com.google.android.material.textfield.TextInputEditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@drawable/edit_text_border"
          android:textColor="@color/black"
          android:textColorHint="@color/black"
          android:layout_marginBottom="5dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:hint="@string/password"
        app:passwordToggleEnabled="true"
        android:transitionName="password_tran"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

      <com.google.android.material.textfield.TextInputEditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textPassword"
          android:background="@drawable/edit_text_border"
          android:textColor="@color/black"
          android:textColorHint="@color/black"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:textColor="@color/black"
        android:text="@string/forgot_password"
        android:layout_gravity="right"
        android:elevation="0dp"
        android:layout_margin="5dp" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:onClick="loginUSer"
        android:transitionName="button_tran"
        android:background="#000000"
        android:textColor="@color/white"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>

    <Button
        android:id="@+id/sign_up_screen_call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:textColor="@color/black"
        android:text="@string/new_user_sign_up"
        android:layout_gravity="right"
        android:elevation="0dp"
        android:fontFamily="@font/antic"
        android:layout_margin="5dp"
        android:transitionName="login_signup_tran"/>
  </LinearLayout>

</LinearLayout>